Changelog for StercSEO.

StercSEO 1.2.2-pl
- Changed author
- Removed development files


StercSEO 1.2.1-pl
- Fixed 301 redirect do not match URLS containing & and %  #32
- Fixed bug with clearing resource URI would add unnecessary 301 redirects

StercSEO 1.2.0-pl
- Changed style for MODX 2.4
- Multiple context support inside sitemap

StercSEO 1.1.2-pl
- Added ability to hide SEOTab for certain contexts (Todo: also add usergroups and templates)

StercSEO 1.1.1-pl
- Optimized 301 grid for MODX 2.3.x

StercSEO 1.1.0-pl
- Changed save function on new document

StercSEO 1.0.10-pl
-Reversed Pull request #30 for not working properly

StercSEO 1.0.9-pl
-Fixed wide vtabs body for MODX 2.3

StercSEO 1.0.8-pl
- Fixed disappearing values when only update 301 redirects. This also fixes the multi context bug. 
- Removed custom CSS for MODX 2.3

StercSEO 1.0.7-pl
==============
- Test against explicit removal from sitemap #30
- Get defaults from modx settings. Add Context aware redirects #28

StercSEO 1.0.6-pl
- Fix OnPageNotFound #23

StercSEO 1.0.2-pl
==============
- Fixed the install for plugin events
- Changed datetime format for Google Sitemap

StercSEO 1.0.1-pl
==============
- Loading tab with Articles
- Added RU localization
- French translation
- Update transport.snippets.php
- Enable drag&drop sorting creating redirects
- Changed the sitemap

StercSEO 1.0.0-pl
==============
- Initial release